// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when closed 1`] = `
.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-0:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::placeholder {
  color: #B9B9BD;
}

.emotion-0:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-0:not(:disabled):hover {
  border-color: #818489;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-0:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-5 {
  position: relative;
}

<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    class="emotion-6"
    role="combobox"
  >
    <div>
      <div
        class="emotion-4"
      >
        <input
          aria-autocomplete="list"
          aria-labelledby="downshift-0-label"
          autocomplete="off"
          class="emotion-0"
          id="downshift-0-input"
          placeholder="Select a value..."
          type="text"
          value=""
        />
        <span
          class="emotion-3"
        >
          <button
            class="emotion-2"
            tabindex="-1"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M16.294 8.294a1 1 0 1 1 1.414 1.414l-5 5a1 1 0 0 1-1.414 0l-5.001-5a1 1 0 0 1 1.414-1.415l4.294 4.294 4.293-4.293z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="emotion-5"
    />
  </div>
</div>
`;

exports[`should render correctly when opened 1`] = `
.emotion-4 {
  position: relative;
}

.emotion-4 input {
  padding-right: 3rem;
}

.emotion-3 {
  position: absolute;
  background-color: #F2F2F7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #B9B9BD;
  border-radius: 2px;
  color: #2D343B;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::-moz-placeholder {
  color: #B9B9BD;
}

.emotion-0:-ms-input-placeholder {
  color: #B9B9BD;
}

.emotion-0::placeholder {
  color: #B9B9BD;
}

.emotion-0:disabled {
  border-color: #DCDCE0;
  background-color: #F2F2F7;
}

.emotion-0:not(:disabled):hover {
  border-color: #818489;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F2F2F7,0 0 0 4px #0A67D1;
}

.emotion-0:not(:disabled):active {
  border-color: #0A67D1;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.5rem;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #2D343B;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-2 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0A67D1;
}

.emotion-2:not(:disabled):hover {
  background-color: rgba(45,52,59,0.1);
}

.emotion-2:focus {
  box-shadow: none;
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-11 {
  position: relative;
}

.emotion-10 {
  list-style: none;
  margin: 0;
  padding: 0;
  border: 1px solid #DCDCE0;
  border-radius: 2px;
  background-color: #FFFFFF;
  box-shadow: 0 2px 4px -1px rgba(0,0,0,0.2),0 1px 10px 0 rgba(0,0,0,0.12),0 4px 5px 0 rgba(0,0,0,0.14);
  max-height: 20rem;
  overflow-y: auto;
  overflow-x: hidden;
  position: absolute;
  width: 100%;
  z-index: 1300;
}

.emotion-5 {
  border-bottom: 1px solid #DCDCE0;
  cursor: pointer;
  padding: 0.325rem 0.5rem;
  -webkit-transition: .1s ease;
  transition: .1s ease;
}

.emotion-5:last-of-type {
  border-bottom: none;
}

.emotion-5:hover {
  background: #F2F2F7;
}

<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    aria-owns="downshift-1-menu"
    class="emotion-12"
    role="combobox"
  >
    <div>
      <div
        class="emotion-4"
      >
        <input
          aria-autocomplete="list"
          aria-controls="downshift-1-menu"
          aria-labelledby="downshift-1-label"
          autocomplete="off"
          class="emotion-0"
          id="downshift-1-input"
          placeholder="Select a value..."
          type="text"
          value=""
        />
        <span
          class="emotion-3"
        >
          <button
            class="emotion-2"
            tabindex="-1"
            type="button"
          >
            <span>
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M14.605 13.194l7 6.998a1 1 0 0 1-1.414 1.414h-.001l-6.997-7a7 7 0 1 1 1.412-1.412zM9 14A5 5 0 1 0 9 4a5 5 0 0 0 0 10z"
                />
              </svg>
            </span>
          </button>
        </span>
      </div>
    </div>
    <div
      class="emotion-11"
    >
      <ul
        aria-labelledby="downshift-1-label"
        class="emotion-10"
        id="downshift-1-menu"
        role="listbox"
      >
        <li
          aria-selected="false"
          class="emotion-5"
          id="downshift-1-item-0"
          role="option"
        >
          Apple
        </li>
        <li
          aria-selected="false"
          class="emotion-5"
          id="downshift-1-item-1"
          role="option"
        >
          Banana
        </li>
        <li
          aria-selected="false"
          class="emotion-5"
          id="downshift-1-item-2"
          role="option"
        >
          Grape
        </li>
        <li
          aria-selected="false"
          class="emotion-5"
          id="downshift-1-item-3"
          role="option"
        >
          Orange
        </li>
        <li
          aria-selected="false"
          class="emotion-5"
          id="downshift-1-item-4"
          role="option"
        >
          Pear
        </li>
      </ul>
    </div>
  </div>
</div>
`;
